
2020-06-26
    * Fix plot.chngpt for three-phase models 
    * Change default bootstrap CI type from symm to perc in summary.chngpt
    
2020-07-01
    * Add logLik.chngptm
    * Add examples of lrtest and lincomb to chngptm man and to vignette
    * Add random intercept model to vignette
    * Improve vignette

2020-08-06
    * M111_search: Add a hack to get around openblas problem for collinear matrix inversion 

2020-08-10
    * M111_search: Use a different implementation of matrix inversion that does not depend on blas

2020-08-10
    * M111_search: Use an alternative way to compute crit that is more numerically stable when highly collinear
    * M111_search: bootstrap may have duplicate threshold candidates, which could cause problems. this is now taken care of
    * M111_search: Removing the hack of skipping if crit 20 percent larger than the previous since it does not work for small datasets
    * fixed a bug related to REML

2020-08-28
    * Add extractAIC, AIC

2020-08-29
    * Make examples run faster by reducing ci.bootstrap.size

2020-09-16
    * M111_search: add fabs to the condition for duplicate thresholds, modify the check for duplicated thresholds

2020-09-17
    * add sieve bootstrap 

2020-09-28
    * add awb bootstrap 

2020-10-6
    * fix getFixedEf.chngptm
    * improve summary.chngptm

2020-10-12
    * fix a bug related to sieveBoot in fastgrid2.cc

2020-10-19
    * fix summary.chngptm to get show.slope.post.threshold to work again

2020-10-25
    * fix chngptm to replace logLik with deviance for quasipoisson fits

2020-12-17
    * fix documentation

2020-2-4
    * add y.adj=NULL, auto.adj.y=FALSE to plot.chngptm so that the fitted lines can be adjusted to go through the data points

2020-2-7
    * add transform to plot.chngpt

2020-2-9
    * add boot.ci.type to double.hinge
    * update kyotil dependency with version number

2020-3-3
    * update chngptm to exit more gracefully when fastgrid fails due to singularity