@@ -1,8 +1,8 @@
 Package: chngpt
 LazyLoad: yes
 LazyData: yes
-Date: 2021.3-3
-Version: 2021.3-3
+Date: 2021.3-16
+Version: 2021.3-16
 Title: Estimation and Hypothesis Testing for Threshold Regression
 Authors@R: c(person("Youyi", "Fong", role = "cre", email = "youyifong@gmail.com"),
     person("Qianqian", "Chen", role = "aut", email = "qc25@uw.edu"),
