@@ -341,3 +341,7 @@
 
 2020-3-3
     * update chngptm to exit more gracefully when fastgrid fails due to singularity
+
+2020-3-16
+	* fix chngptm so that coef for M12 is not messed by due to
+	hinge.to.upperhinge (line 666)
